2007-01-18  Michael Natterer  <mitch@gimp.org>

	* app/pdb/color_cmds.c: regenerated.

2007-01-18  Kevin Cozens  <kcozens@cvs.gnome.org>

	* tools/pdbgen/pdb/color.pdb: allow low value to be equal to the high
	value for PDB call to gimp-threshold. From a patch by Dave Gowers.
	Fixes bug #397903.

2007-01-17  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/curve_bend.c (bender_type_callback): check data
	before accessing it to avoid crashing while the dialog is being
	constructed. Fixes bug #395798.

2007-01-16  Sven Neumann  <sven@gimp.org>

	* app/actions/file-commands.c (file_open_dialog_show): use the
	toplevel widget as transient parent.

2007-01-16  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpprofilechooserdialog.c: use GTK_RESPONSE_ACCEPT
	to make it work properly with GtkFileChooserButton.

2007-01-16  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpprofilechooserdialog.c: include *.icm files in
	the filter. Add a shortcut to the systemwide color profile folder.

2007-01-16  Michael Natterer  <mitch@gimp.org>

	* app/plug-in/gimpplugin-message.c (gimp_plug_in_handle_proc_run):
	fixed comment.

2007-01-15  Michael Natterer  <mitch@gimp.org>

	* app/base/pixel-region.c (pixel_region_set,get_row): add support
	for non-tiled regions.

	* app/paint/gimpperspectiveclone.[ch]: replace handmade
	transformation code by a call to gimp_transform_region(). Fix
	getting the original pixels for src_pickable != dest_drawable
	(bug #394610). Various small fixes and cleanups.

2007-01-15  Hans Breuer  <hans@breuer.org>

	* plug-ins/makefile.msc : define YY_NO_UNISTD_H to compile
	imagemap with msvc/win32

2007-01-15  Sven Neumann  <sven@gimp.org>

	* plug-ins/jpeg/jpeg-exif.c (jpeg_exif_rotate_query): ellipsize
	the image name displayed below the thumbnail.

2007-01-15  Sven Neumann  <sven@gimp.org>

	* app/actions/file-commands.[ch]
	* app/actions/file-actions.c
	* menus/image-menu.xml.in: removed "file-open-from-image" action