@@ -49,6 +49,7 @@ typedef enum
   ISCISSORS_OP_SELECT,
   ISCISSORS_OP_MOVE_POINT,
   ISCISSORS_OP_ADD_POINT,
+  ISCISSORS_OP_CONNECT,
   ISCISSORS_OP_IMPOSSIBLE
 } IscissorsOps;
 
